<resources>
    <string name="app_name">鼾声识别</string>
    <string name="snoring_recognition">鼾声识别</string>
    <string name="click_to_see_info">点击查看详情</string>
    <string name="log_start_text">开始记录</string>
    <string name="yes">存疑</string>
    <string name="no">正常</string>
    <string name="calculating">计算中</string>
    <string name="unexcept">出错了</string>
    <string name="duration_s_unit">秒</string>
    <string name="duration_s">%d秒</string>
    <string name="duration_ms">%d分%d秒</string>
    <string name="duration_hm">%d小时%d分</string>
    <string name="log_duration">记录时长 %s</string>
    <string name="snore_total_duration">鼾声总时长 %s</string>
    <string name="snore_times">共 %d 次鼾声</string>
    <string name="snore_time_0">未检测到鼾声</string>
    <string name="detail_duration">记录时长</string>
    <string name="detail_snore_duration">鼾声总时长</string>
    <string name="detail_snore_times">鼾声次数</string>
    <string name="detail_subtitle_maybe">结果似乎不太安全，建议前往医院进一步诊断</string>
    <string name="detail_subtitle_healthy">目前未检测到疑似症状</string>
    <string name="detail_subtitle_calcing">还在计算中，请稍后查看</string>
    <string name="detail_subtitle_exception">Oops！软件出现了未知问题！</string>
    <string name="detail_only_4_ref">该检测结果仅供参考，不作为最终诊断依据</string>
    <string name="snore_start_at">开始</string>
    <string name="snore_duration">持续</string>
    <string name="monitor_detail_not">详情暂不可用</string>
    <string name="monitor_detail_ok">显示详情</string>
    <string name="monitor_note_ready">随时可以开始</string>
    <string name="monitor_note_recording">正在监测中</string>
    <string name="monitor_note_stopping">正在停止，如长期未响应可能为程序故障</string>
    <string name="monitor_note_stop">已终止监测，可点击下方查看结果</string>
    <string name="monitor_tap_to_start">开始监测</string>
    <string name="monitor_tap_to_stop">停止监测</string>
    <string name="monitor_tap_try_stop">正在停止</string>
    <string name="monitor_tap_to_restart">再次开始</string>
    <string name="navigator_history">历史记录</string>
    <string name="navigator_to_monitor">准备监测</string>
    <string name="navigator_monitoring">监测中</string>
    <string name="title_detail">记录详情</string>
    <string name="back">返回</string>
    <string name="about">关于</string>
    <string name="version_display">版本 1.0.0</string>
    <string name="about_osa">阻塞性睡眠呼吸暂停（OSA）</string>
    <string name="about_osa_description">\u3000\u3000OSA 一般是指每次发作时，口、鼻气流停止流通达 10 秒或更长时间，并伴有血氧饱和度下降等症状的疾病，以睡眠打鼾、呼吸暂停和白天嗜睡为主要表现。</string>
    <string name="about_ess">Epworth 嗜睡量表（ESS）</string>
    <string name="about_ess_description">\u3000\u3000Epworth 嗜睡量表用于评估人们在日间是否有过度瞌睡状态，从而辅助诊断神经系统疾病、呼吸系统疾病、精神心理疾病、睡眠障碍等。</string>
    <string name="about_psqi">匹兹堡睡眠质量指数（PSQI）</string>
    <string name="about_psqi_description">\u3000\u3000PSQI由美国匹兹堡精神科医师Buysse博士等人于1993年编制，可用于评定被试者近1个月的睡眠质量。</string>
    <string name="about_to_test">前往自测</string>
    <string name="about_to_detail">了解更多</string>
    <string name="osa_header">阻塞性睡眠呼吸暂停</string>
    <string name="osa_index_01_title">疾病描述</string>
    <string name="osa_index_02">\u3000\u3000阻塞性睡眠呼吸暂停，一般是指成人每晚7小时的睡眠期间中，发作次数达30次以上，每次发作时，口、鼻气流停止流通达10秒或更长时间，并伴有血氧饱和度下降等症状的疾病。该疾病归属于<b>耳鼻喉科</b>。另外还有中枢性睡眠呼吸暂停（CSA）和混合性睡眠呼吸暂停（MSA）。近年来，随着各种测试方法不断进展，对OSA进行深入地综合研究，发现本病的复杂、多变和普遍存在。因此，对OSA不能一般地视为社会交生活中影响旁人休息的厌烦声响，而是需要进行仔细检查的一种临床疾患，它可引起许多严重的并发症。由于产生鼾症的解剖部位与耳鼻咽喉关系密切，不少病人往往首先求治于耳鼻咽喉科。</string>
    <string name="osa_index_03_title">症状体征</string>
    <string name="osa_index_04">\u3000\u3000几乎所有病人睡眠后都有高调鼾声，影响同室人休息。而打鼾、憋气、停止呼吸等循环表现，也常由其家人或室友述诉提供。患者白天嗜睡，往往在谈话间不自觉地入睡。记忆力减退，注意力不能集中，工作效率下降。还可有情绪和行为的变化。躁动、多梦、遗尿、阳痿、晨起头痛等。在儿童可能有智力降低，学习成绩下降，也可能出现梦游、梦魇等症。严重持久的病人可并发高血压、心律失常、心肺功能衷竭等。</string>
    <string name="osa_index_05_title">病因</string>
    <string name="osa_index_06">1、从解剖学方面来看，喉上方有3个部分容易发生狭窄、阻塞，气流振动咽部皱襞（如软腭、皱折的粘膜等）及分泌物，形成外围声。这3处为：<b>鼻和鼻咽，口咽和软腭，以及舌根部</b>。亦可见到喉咽狭窄所致者。鼻腔和鼻咽为呼吸道的重要部分。鼻和鼻咽阻塞如鼻中隔偏曲，鼻息肉，鼻甲肿大，鼻腔肿瘤，腺样体肥大和鼻咽肿瘤等常引起OSA发作。口咽和软腭是睡眠时出现阻塞最常见的部位，最为明显的例子为扁桃体Ⅳ度肥大容易引起鼾症，切除扁桃体后鼾声消失或减轻。lkamatsu (1964)测量过鼾症患者的口咽面积，发现其口咽较窄，软腭，悬雍垂较长者占91%。其他疾患，如舌体肥大，颌骨畸形，会厌后肿瘤、喉部或颈椎畸形等，均可发生OSA症状。</string>
    <string name="osa_index_07">2、<b>肥胖</b>也是常见原因，颈咽部组织拥挤，导致呼吸阻塞。据Gurlleminault等（1977）统计，患有严重打鼾或OSA者有70%体重超过正常。</string>
    <string name="osa_index_08">3、<b>内分泌紊乱</b>，如甲状腺机能减退，出现粘液水肿。</string>
    <string name="osa_index_09">4、<b>老年性变化</b>也是原因之一。老年期组织松弛。近代有些神经生理研究，探讨气道阻塞的咽周围神经肌肉方面的原因。通过对颏舌肌、二腹肌、膈肌等肌电话动的测试，发现在阻塞发作前这些肌肉的肌电活动就出现减弱，由于肌张力减弱，致使咽壁松弛、塌陷而内移，引起打鼾或OSA。</string>
    <string name="osa_index_10_title">OSA的危险因子</string>
    <string name="osa_index_11">1. <b>性别</b>：男性得病的机会约为女性的二至八倍。但是女性在停经后，得病的机会与男性相当。　</string>
    <string name="osa_index_12">2. <b>年龄</b>: 随着年纪增长，上呼吸道肌肉张力将减少，因而较易发生塌陷。</string>
    <string name="osa_index_13">3. <b>肥胖</b>：大于理想体重的120%以上者，较有危险性。</string>
    <string name="osa_index_14">4. <b>颈围</b>：男性大于十七英吋（43公分），女性大于十五英吋（38公分）者。</string>
    <string name="osa_index_15">5. <b>解剖构造异常</b>: 舌后或后悬瓮垂空间过小、舌头太大、扁桃肥大、口、鼻咽软组织过多、软颚过高、下颚后缩、下颚过小或颜面畸形。</string>
    <string name="osa_index_16">6. <b>特殊先天性疾病</b>：例如唐氏症。</string>
    <string name="osa_index_17">7. <b>内分泌疾病</b>：如甲状腺功能低下、肢端肥大症 。</string>
    <string name="osa_index_18">8. <b>喝酒、服用镇定剂或安眠药</b>则会因为使上呼吸道肌肉张力减少而使情况恶化。</string>
    <string name="osa_index_19_title">睡眠呼吸中止症 - 指数</string>
    <string name="osa_index_20">\u3000\u3000“无呼吸-低呼吸指数”（Apnea-hypopnea Index, AHI）是指平均一小时无呼吸及低呼吸事件的次数。在成人，普遍将AHI高于5诊断为患有睡眠呼吸暂停。在儿童，诊断数值未有定案，有人将AHI高于1.5定义为睡眠呼吸暂停。</string>
    <string name="osa_index_21_title">警兆</string>
    <string name="osa_index_22"><b>(一)成人方面</b></string>
    <string name="osa_index_22_1">1. <b>巨大的鼾声</b>，隔几个房间的人(甚至邻居)都可以听到。</string>
    <string name="osa_index_22_2">2. <b>鼾声型态特殊</b>，会因呼吸停止而鼾声中断，然后喘气，表示此人呼吸停止然后又开始呼吸。</string>
    <string name="osa_index_22_3">3. <b>白天嗜睡</b>，例如：工作中或开车时。</string>
    <string name="osa_index_22_4">4. 注意力不集中、健忘、易怒、焦虑或忧郁。</string>
    <string name="osa_index_22_5">5. 清晨头痛、夜间频尿、性欲降低、男性会抱怨阳萎、女性则会月经失调。</string>
    <string name="osa_index_23">\u3000\u3000这些问题经常是数年间慢慢产生，某些症状会被忽略，家庭成员、老板或同事可能会首先注意到病人患有嗜睡以及情绪或行为上的改变，若发现别人有这些症状应该鼓励他们就医。</string>
    <string name="osa_index_24"><b>(二)儿童方面</b></string>
    <string name="osa_index_24_1">1. OSA 可能和婴儿猝死症有关，虽然详细的原因并不清楚，有一些研究正在探讨阻塞性睡眠呼吸中止症和婴儿猝死症的关系。</string>
    <string name="osa_index_24_2">2. OSA 主要影响那些超重或扁桃腺肥大的儿童。</string>
    <string name="osa_index_24_3">3. 有 OSA 的儿童会有：</string>
    <string name="osa_index_24_4">\u3000(1)打鼾或睡觉后呼吸会有异声</string>
    <string name="osa_index_24_5">\u3000(2)呼吸困难</string>
    <string name="osa_index_24_6">\u3000(3)睡眠断断续续</string>
    <string name="osa_index_24_7">\u3000(4)白天会有过动或嗜睡的现象</string>
    <string name="osa_index_24_8">4.孩子较大开始上学后，可能看起来会比较懒，而且在学校表现较差，有时会被认为迟钝或懒散。</string>
    <string name="osa_index_24_9">\u3000\u3000对一个小孩子而言，每天晚上大声打鼾并不是正常的现象，因此父母亲应该带小孩求诊并向医师报告打鼾的现象。</string>
    <string name="osa_index_25_title">病理生理</string>
    <string name="osa_index_26">\u3000\u3000正常呼吸时，外界空气进入肺泡进行气体交换。这种气体交换过程的关键是喉以上的上呼吸道，能使气流畅通地进入气管支气管。如果由于某种原因，这段气流受阻就将出现打鼾或阻塞性睡眠呼吸暂停。 严重的OSA患者，可能每晚有200或更多次的呼吸暂停发作，伴有缺氧。呼吸阻断时间平均为25—30秒，有时可能超过1分钟。肺动脉压随血氧减低而收缩增高，因而引起右心负担加重，导致右心室肥厚，甚至心力衰竭。</string>
    <string name="osa_index_27_title">诊断检查</string>
    <string name="osa_index_28">\u3000\u3000对于OSA病人应进行多导睡眠监护仪测试。近年来，在有条件的单位纷纷建立睡眠研究中心，OSA的诊断和治疗是其主要研究内容之一。参加研究的既有基础学科专家（如生理学、病理生理学），也有临床医师（内科、神经科、肺科、耳鼻咽喉科学）。病人在研究中心可以得到整夜连续的睡眠观察、监测和自动记录。除肺功能测试和心脏监护外，还包括脑电图、眼电图、肌电图（二腹肌、咽肌、颏肌等）、耳血氧饱和度等。通过以上检测，可以了解病人睡眠期机体的变化，以及睡眠呼吸暂停的性质（分型）和程度等。</string>
    <string name="osa_index_29_title">治疗方案</string>
    <string name="osa_index_30"><b>1、非手术治疗</b>主要针对一些轻度鼾症病人，方法甚多，择要介绍如下：</string>
    <string name="osa_index_30_1">\u3000(1) 睡时调整体位，改仰卧为侧卧，可能减轻或消除鼾声。</string>
    <string name="osa_index_30_2">\u3000(2) 减肥。可用各种方法，如应用药物，控制饮食，加强活动等，以减轻体重，常可取得一定效果。</string>
    <string name="osa_index_30_3">\u3000(3) 药物治疗。睡前服抗忧郁药，普罗替林30mg，可能奏效。睡前应避免使用酒精、安眠药等中枢神经系统抑制剂。</string>
    <string name="osa_index_30_4">\u3000(4) 睡时用持续正压通气法，通过面罩导入气流，压力维持在5—15cmH2O之间。</string>
    <string name="osa_index_31"><b>2、手术治疗</b>原则上应采取相应的措施，除去致病的因素。因鼻息肉、鼻中隔偏曲者，应需要摘除鼻息肉，矫正鼻中隔；扁桃体和（或）腺样体肥大者，可施行扁桃体和（或）腺样体切除术，都可取得良好效果。悬雍垂腭咽成形术或腭咽成形术，是近年来常用的治疗OSA手术方法之一。尚有一些变通术式，不另介绍。手术切除腭舌弓的一半、软腭边缘粘膜、悬雍垂以及腭弓：可同时行扁桃体切除。术后可增加软腭、扁桃体窝和咽后壁间的空间，以减少上呼吸道的阻力。故术后鼾声减轻，甚至消失。但对严重的OSA，不一定见效，特别是某些心肺功能较差、血氧饱和度较低的病人，尚须考虑应用其他方法治疗。Borowiecki等（1983）认为气管切开术仍不失为治疗OSA最好的方法。</string>
    <string name="osa_index_99">文章来源：<a href="https://baike.baidu.com/item/%E9%98%BB%E5%A1%9E%E6%80%A7%E7%9D%A1%E7%9C%A0%E5%91%BC%E5%90%B8%E6%9A%82%E5%81%9C/10145124">百度百科</a></string>
    <string name="ess_test_title">Epworth 嗜睡量表</string>
    <string name="ess_test_choice_0">从不打瞌睡</string>
    <string name="ess_test_choice_1">小概率会打瞌睡</string>
    <string name="ess_test_choice_2">有中等概率会打瞌睡</string>
    <string name="ess_test_choice_3">很大可能打瞌睡</string>
    <string name="ess_test_description">\u3000\u3000下列情况你打瞌睡的可能性如何？这是指你最近几个月以来的通常生活情况。在以下假设的场景中，请填上每种场景下你的精神状态（如果最近未经历该场景，则尝试填上你认为你最可能出现的状态）。积分规则为：</string>
    <string name="ess_test_description1">\u3000<b>0：</b>从不打瞌睡</string>
    <string name="ess_test_description2">\u3000<b>1：</b>小概率会打瞌睡</string>
    <string name="ess_test_description3">\u3000<b>2：</b>有中等概率会打瞌睡</string>
    <string name="ess_test_description4">\u3000<b>3：</b>很大可能打瞌睡</string>
    <string name="ess_test_descriptionEnd">\u3000\u3000这里只有8个场景。我们会在页面末尾帮您统计总积分。</string>
    <string name="ess_test_descriptionGuid">\u3000\u3000请在下面滑动星星进行选择。</string>
    <string name="ess_test_question1">1. 坐着阅读书刊</string>
    <string name="ess_test_question2">2. 看电视</string>
    <string name="ess_test_question3">3. 在公共场合坐着不动（如位于剧院或正在开会）</string>
    <string name="ess_test_question4">4. 乘坐汽车超过一小时，中间不休息</string>
    <string name="ess_test_question5">5. 环境许可的情况下，在下午躺下休息</string>
    <string name="ess_test_question6">6. 坐下与人谈话</string>
    <string name="ess_test_question7">7. 午餐未喝酒的情况下，在餐后安静地坐着</string>
    <string name="ess_test_question8">8. 遇到堵车场景，停车数分钟</string>
    <string name="ess_test_result_note">您的积分</string>
    <string name="ess_test_result_1">正常</string>
    <string name="ess_test_result_2">轻度嗜睡</string>
    <string name="ess_test_result_3">比较嗜睡</string>
    <string name="ess_test_result_4">有危险性的嗜睡</string>
    <string name="ess_test_benchmark"><b>计分标准：</b></string>
    <string name="ess_test_benchmark1">\u3000<b>0-6分：</b>正常</string>
    <string name="ess_test_benchmark2">\u3000<b>7-10分：</b>轻度嗜睡</string>
    <string name="ess_test_benchmark3">\u3000<b>11-16分：</b>比较嗜睡</string>
    <string name="ess_test_benchmark4">\u3000<b>17-24分：</b>有危险性的嗜睡</string>
    <string name="ess_test_ratingBarHelp">选择该场景下您打瞌睡的概率，1星表示从不打瞌睡，4星表示很大可能打瞌睡</string>
    <string name="psqi_test_title">匹兹堡睡眠质量指数</string>
    <string name="psqi_test_Common_Frequence_1">过去一个月没有</string>
    <string name="psqi_test_Common_Frequence_2">平均每周不足一个晚上</string>
    <string name="psqi_test_Common_Frequence_3">平均每周有一或二个晚上</string>
    <string name="psqi_test_Common_Frequence_4">平均每周三个晚上或更多</string>
    <string name="psqi_test_Common_Standard">本题计分标准：</string>
    <string name="psqi_test_Common_DetailOneQuestion">\u3000\u3000该题目选项中，选中项括号内的分值为本部分得分。</string>
    <string name="psqi_test_Common_DetailPerQuestion">\u3000\u3000对本部分的每一题按照选中项括号中的分值求和，按照以下规则得到本部分最终得分：</string>
    <string name="psqi_test_Common_DetailIndependent">\u3000\u3000对本部分的每一题所得分值求和，按照以下规则得到本部分最终得分：</string>
    <string name="psqi_test_Common_Detail1">过去一个月没有 <b>（0 分）</b></string>
    <string name="psqi_test_Common_Detail2">平均每周不足一个晚上 <b>（1 分）</b></string>
    <string name="psqi_test_Common_Detail3">平均每周有一或二个晚上 <b>（2 分）</b></string>
    <string name="psqi_test_Common_Detail4">平均每周三个晚上或更多 <b>（3 分）</b></string>
    <string name="psqi_test_partA_1_title">第一部分 睡眠质量</string>
    <string name="psqi_test_partA_2_question1">1. 在最近一个月中，总的来说，您认为自己的睡眠质量如何？</string>
    <string name="psqi_test_partA_3_choice1">很好</string>
    <string name="psqi_test_partA_3_choice2">较好</string>
    <string name="psqi_test_partA_3_choice3">较差</string>
    <string name="psqi_test_partA_3_choice4">很差</string>
    <string name="psqi_test_partA_3_detail1">很好 <b>（0 分）</b></string>
    <string name="psqi_test_partA_3_detail2">较好 <b>（1 分）</b></string>
</resources>