<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="auto"
    android:background="@color/background">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/IndependentCustomizeTitle_CardView">
        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/IndependentCustomizeTitle_Layout">
            <ImageButton
                android:id="@+id/go_back"
                style="@style/CustomizeBack"
                android:contentDescription="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                style="@style/IndependentCustomizeTitle_Text"
                android:text="@string/osa_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    style="@style/ContentCardViewLayoutStyle">
                    <TextView
                        style="@style/ContentCardViewTitleStyle"
                        android:text="@string/osa_index_01_title" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_02" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    style="@style/ContentCardViewLayoutStyle">
                    <TextView
                        style="@style/ContentCardViewTitleStyle"
                        android:text="@string/osa_index_03_title" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_04" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    style="@style/ContentCardViewLayoutStyle">
                    <TextView
                        style="@style/ContentCardViewTitleStyle"
                        android:text="@string/osa_index_05_title" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_06" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_07" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_08" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_09" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    style="@style/ContentCardViewLayoutStyle">
                    <TextView
                        style="@style/ContentCardViewTitleStyle"
                        android:text="@string/osa_index_10_title" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_11" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_12" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_13" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_14" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_15" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_16" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_17" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_18" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    style="@style/ContentCardViewLayoutStyle">
                    <TextView
                        style="@style/ContentCardViewTitleStyle"
                        android:text="@string/osa_index_19_title" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_20" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    style="@style/ContentCardViewLayoutStyle">
                    <TextView
                        style="@style/ContentCardViewTitleStyle"
                        android:text="@string/osa_index_21_title" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_22" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_22_1" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_22_2" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_22_3" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_22_4" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_22_5" />
                    <TextView
                        style="@style/ContentCardViewMainStyleNewParam"
                        android:text="@string/osa_index_23" />
                    <TextView
                        style="@style/ContentCardViewMainStyleNewParam"
                        android:text="@string/osa_index_24" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_24_1" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_24_2" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_24_3" />
                    <TextView
                        style="@style/ContentCardViewMainStyleNewParam"
                        android:text="@string/osa_index_24_4" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_24_5" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_24_6" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_24_7" />
                    <TextView
                        style="@style/ContentCardViewMainStyleNewParam"
                        android:text="@string/osa_index_24_8" />
                    <TextView
                        style="@style/ContentCardViewMainStyleNewParam"
                        android:text="@string/osa_index_24_9" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    style="@style/ContentCardViewLayoutStyle">
                    <TextView
                        style="@style/ContentCardViewTitleStyle"
                        android:text="@string/osa_index_25_title" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_26" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    style="@style/ContentCardViewLayoutStyle">
                    <TextView
                        style="@style/ContentCardViewTitleStyle"
                        android:text="@string/osa_index_27_title" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_28" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    style="@style/ContentCardViewLayoutStyle">
                    <TextView
                        style="@style/ContentCardViewTitleStyle"
                        android:text="@string/osa_index_29_title" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_30" />
                    <TextView
                        style="@style/ContentCardViewMainStyleNewParam"
                        android:text="@string/osa_index_30_1" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_30_2" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_30_3" />
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/osa_index_30_4" />
                    <TextView
                        style="@style/ContentCardViewMainStyleNewParam"
                        android:text="@string/osa_index_31" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/gotoRef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/osa_index_99"
                android:textColor="@color/text_aux"
                android:textSize="18sp"
                android:layout_marginTop="10sp" />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>