<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="auto"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/go_back"
        style="@style/CustomizeBack"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/CustomizeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CustomizeTitle" />

    <TextView
        android:id="@+id/CustomizeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomizeTitle"
        android:text="@string/about"
        android:textColor="@color/text_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CustomizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/app_icon"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_margin="40dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <View
                        android:layout_width="108dp"
                        android:layout_height="108dp"
                        android:background="@drawable/ic_launcher_background"
                        android:foreground="@drawable/ic_launcher_foreground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/text_main"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/version_display"
                android:textColor="@color/text_aux"
                android:textSize="16sp" />

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_osa"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:textColor="@color/text_main"
                        android:layout_marginBottom="3dp"/>
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/about_osa_description" />
                    <Button
                        android:id="@+id/to_osa"
                        style="@style/AboutPage_MoreInfoButton"
                        android:text="@string/about_to_detail" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_psqi"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:textColor="@color/text_main"
                        android:layout_marginBottom="3dp"/>
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/about_psqi_description" />
                    <Button
                        android:id="@+id/to_psqi"
                        style="@style/AboutPage_MoreInfoButton"
                        android:text="@string/about_to_test" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContentCardViewStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_ess"
                        android:textColor="@color/text_main"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:layout_marginBottom="3dp"/>
                    <TextView
                        style="@style/ContentCardViewMainStyle"
                        android:text="@string/about_ess_description" />
                    <Button
                        android:id="@+id/to_ess"
                        style="@style/AboutPage_MoreInfoButton"
                        android:text="@string/about_to_test" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>